# rag-agent

./: .env.example  .envrc  .gitignore  .releaserc.json  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: changelog.yml  ci.yml  release.yml
mcp-latex/: !README.md  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  mcp_latex_tool.py  requirements.txt  run_server.py  template_manager.py  ue5_nanite_system.tex
mcp-latex/templates/device_diagnosis/: example.json  metadata.json  schema.json  template.tex
rag_agent/: AGENTS.md  __init__.py  cli.py  config.py  data_loader.py  multi_dataset_loader.py  pdf_generator.py  rag_engine.py
rag_agent/agents/: AGENTS.md  diagnosis_agent.py  qa_agent.py  router.py
rag_agent/apps/: __init__.py  base.py  qa_app.py  report_app.py
rag_agent/graphs/: AGENTS.md  diagnosis_graph.py  main_graph.py  qa_graph.py
rag_agent/mcp/: __init__.py  latex_client.py  template_engine.py
rag_agent/mcp/templates/: default.tex  device_diagnosis.tex  technical_report.tex
rag_agent/memory/: AGENTS.md  long_term.py  short_term.py
rag_agent/prompts/: __init__.py  diagnosis.py
rag_agent/retrieval/: AGENTS.md  __init__.py  base_enhanced_retriever.py  bm25_retriever.py  hybrid_retriever.py  query_expander.py  reranker.py
rag_agent/schemas/: diagnosis.py  state.py
rag_agent/tools/: retrieval.py
scripts/: download_datasets.py  test_multi_dataset.py
src/rag_agent/: __init__.py  cli.py  config.py  data_loader.py  rag_engine.py
