[project]
name = "rag-agent"
version = "0.1.0"
description = "A simple device Q&A agent powered by LangChain and Hugging Face"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "prompt-toolkit>=3.0.52",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "typer>=0.20.0",
]

[project.scripts]
rag-agent = "rag_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.7",
]
